<resources>
    <string name="app_name">Persistence</string>
    <string name="lastName">Last name</string>
    <string name="a1">Registration</string>
    <string name="firstName">First name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="validate">Validate</string>
    <string name="list_of_exercices">List of Exercices</string>
    <string name="a0_btn1_text">Exercice 1 : Sauvegarde de l\'état d\'une activité</string>
    <string name="a0_btn2_text">Exercice 2 : Manipulation de fichiers</string>
    <string name="submit">Submit</string>
    <string name="a0_btn3_text">Exercice 3 : LifeCycle</string>
    <string name="a2">Manipulation de fichiers</string>
    <string name="a0_btn4_text">Exercice 4 : ViewModel</string>
    <string name="planning">Display Planning</string>
    <string name="a4">ViewModel</string>
    <string name="a3">LifeCycle</string>
    <string name="a5">LiveData</string>
    <string name="pla5_tv_1">Rencontre client Dupont</string>
    <string name="pla5_tv_2">Travailler le dossier recrutement</string>
    <string name="pla5_tv_3">Réunion équipe</string>
    <string name="pla5_tv_4">Préparation dossier vente</string>
    <string name="pla5_btn_liveData">Live Data</string>
    <string name="a0_btn5_text">Exercice 5 : LiveData</string>
    <string name="a0_btn6_text">Exercice 6 : Base de données Room</string>
    <string name="a6">Base de données Room</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="room">Room</string>
</resources>