<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".Exo2bis">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/a2"
        android:textSize="30sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.5"
        android:background="?android:attr/listDivider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/a2bis_et_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:inputType="text"
                android:autofillHints=""
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/a2bis_et_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                android:inputType="text"
                android:autofillHints=""
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/a2bis_et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:autofillHints=""
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/a2bis_et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:autofillHints=""
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/a2bis_et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="text"
                android:autofillHints=""
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>