<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_of_exercices"
            android:textSize="30sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/a0_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a0_btn1_text"
            android:padding="20dp"/>

        <Button
            android:id="@+id/a0_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a0_btn2_text"
            android:padding="20dp"/>

<!--        <Button-->
<!--            android:id="@+id/a0_btn3"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/a0_btn3_text"-->
<!--            android:padding="20dp"/>-->

<!--        <Button-->
<!--            android:id="@+id/a0_btn4"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/a0_btn4_text"-->
<!--            android:padding="20dp"/>-->

<!--        <Button-->
<!--            android:id="@+id/a0_btn5"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/a0_btn5_text"-->
<!--            android:padding="20dp"/>-->

<!--        <Button-->
<!--            android:id="@+id/a0_btn6"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/a0_btn6_text"-->
<!--            android:padding="20dp"/>-->

    </LinearLayout>
</ScrollView>